2015-02-17  Per Bothner  <per@bothner.com>

	* compile_map.scm: Implement inlining for map and for-each.
	(MapHelper): New abstract class.
	(validate-generic-for-each): Change API to depend on a MapHelper
	instance, rather than multiple functions.
	* kawa/expressions.scm (Declaration, Expression, ApplyExp, QuoteExp)
	Compilation): Define and export some type aliases.
	(begin-exp, apply-exp): Don't use the map function, since
	compiling it depends on compile_map, which isn't compiled yet.
	* Makefile.am (java_SCM_ALWAYS): Re-arrange, since vector depends
	on map, which depends on kawa/expression and compile_map.

	* kawa/all.scm:  Rename to ...
	* kawa/base.scm: ... new name.
	* Makefile.am: Update accordingly.

2015-02-16  Helmut Eller <eller.helmut@gmail.com>
	    Per Bothner  <per@bothner.com>

	* kawa/reflect.scm: New Scheme library (kawa reflect).
	* kawa/all.scm: New Scheme library.
	* scheme/base-exports, scheme/char-exports, scheme/complex-exports,
	scheme/cxr-exports, scheme/eval-exports, scheme/file-exports,
	scheme/inexact-exports, scheme/lazy-exports,
	scheme/process-context-exports, scheme/time-exports,
	scheme/write-exports: New files containing corresponding exports lists.
	* scheme/*.scm: Use new *-exports files.
	* Makefile.am: Update accordingly.

2015-02-14  Per Bothner  <per@bothner.com>

	* compile_map.scm (listForEachValidateApply): New method, for
	inlining list-based for-each.
	(validate-generic-for-each): Handle if procedure has side-effects.

2015-02-12  Per Bothner  <per@bothner.com>

	* syntax.scm (let-values): Simplification/optimization of common case.

2015-02-11  Per Bothner  <per@bothner.com>

	* syntax.scm (let-values): Use syntax-case instead of syntax-rules.
	This lets us generating "matching" names for the helper variables,
	rather than calling all of them 'x'.

2015-02-09  Per Bothner  <per@bothner.com>

	* prim_syntax.scm (if): Update for mlambda syntax change.

	* characters.scm: Update to use new type specifier syntax.